# NLP-SHF

./: MyApp.py  README.md  prueba.ipynb  pyproject.toml
