[tool.poetry]
name = "nlp-shf"
version = "0.1.0"
description = ""
authors = ["Oscar Santos", "Tomás Lucas <tomaslucas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
streamlit = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
